z-index fix for toggle nav

--- a/css/partials/_theme.scss
+++ b/css/partials/_theme.scss
@@ -286,7 +286,7 @@ b {
   position: fixed;
   top: 20px;
   left: 20px;
-  z-index: 1;
+  z-index: 12000;
   width: 36px;
   height: 36px;
   box-sizing: border-box;
@@ -326,6 +326,7 @@ span:nth-child(2) {
 }
 .nav-toggle {
   position: fixed;
+  z-index: 11000;
   width: 83px;
   top: 0;
   bottom: 0;
